--- a/src/contracts/artifacts/ProjectContract_metadata.json
+++ b/src/contracts/artifacts/ProjectContract_metadata.json
@@ -1,6 +1,6 @@
 {
 	"compiler": {
-		"version": "0.8.22+commit.4fc1097e"
+		"version": "0.8.18+commit.87f61d96"
 	},
 	"language": "Solidity",
 	"output": {
@@ -692,7 +692,7 @@
 		"compilationTarget": {
 			"src/contracts/Project.sol": "ProjectContract"
 		},
-		"evmVersion": "shanghai",
+		"evmVersion": "paris",
 		"libraries": {},
 		"metadata": {
 			"bytecodeHash": "ipfs"
